# mvcx

./: pyproject.toml
src/mvcx/: __init__.py  _app.py  db.py  di.py  dtos.py  forms.py  http.py  middleware.py  models.py  repositories.py  templating.py  views.py  websockets.py
src/mvcx/_cli/: __init__.py  _app.py  _config.py  _migrations.py  _project.py  _server.py  _utils.py
src/mvcx/_templates/app/: repositories.py  views.py
src/mvcx/_templates/project/: .gitignore  package.json  tsconfig.json
src/mvcx/_templates/project/src/core/: asgi.py
src/mvcx/_templates/project/src/migrations/: env.py
src/mvcx/_templates/project/src/static/: globals.css  index.ts  observers.ts  registry.ts  utils.ts
src/mvcx/_templates/project/src/static/components/form/: link.ts
src/mvcx/_templates/project/src/static/components/theme-controller/: theme-controller.ts
src/mvcx/_templates/project/src/templates/: index.html
src/mvcx/_templates/project/src/templates/components/: navbar.html
src/mvcx/_templates/project/src/templates/layouts/: main_layout.html
src/mvcx/_templates/project/src/welcome/: models.py  views.py
src/mvcx/_templates/project/src/welcome/templates/: welcome_page.html
src/mvcx/templates/project/: alembic.ini
src/mvcx/templates/project/src/core/: registry.py
src/mvcx/templates/project/src/static/: state.ts
src/mvcx/templates/project/src/static/components/button/: button.css
src/mvcx/templates/project/src/templates/components/: theme_controller.html
src/mvcx/templates/project/src/welcome/: views.py
(+1 files in other folders)
