[project]
name = "mvcx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "IronRomulus", email = "marco.possamai@romutech.net" }]
requires-python = ">3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "click>=8.2.1",
    "dotenv>=0.9.9",
    "fast-depends>=2.4.12",
    "granian>=2.5.0",
    "jinja2>=3.1.6",
    "lucide>=1.1.3",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.2",
    "starlette-csrf>=3.0.0",
    "starlette-wtf>=0.4.5",
    "uvicorn>=0.35.0",
]

[project.scripts]
mvcx = "mvcx._cli:cli"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
